--- a/boutique/medium/digital-numerique/index.html
+++ b/boutique/medium/digital-numerique/index.html
@@ -56,9 +56,6 @@
           <a href="last-of-the-big-tuskers/"><h5 class="woo-title">Magnificent Seven</h5></a>
           <h5 class="woo-description">Collection of<font class="fr">&nbsp;&#92;&nbsp;de</font> 7</h5>
           <h5 class="woo-tag"><em>Last of the Big Tuskers</em> (2018)</h5>
-          <!-- <h5 class="woo-category">Digital Edition<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition num&eacute;rique</font></h5>
-          <h5 class="woo-dimension">3840 &times; 2160 px<sup>&nbsp;[<a class="button" onclick="fn();" title="Size List">1</a>]</sup></h5>
-          <h5 class="woo-price-amount">CA<font class="woo-currency-symbol">&#36;</font><font class="price">7</font></h5> -->
         </li>
 
         <br class="clear">
@@ -71,7 +68,20 @@
     <div class="clear diptych">
 
       <div class="quote">
-        <p class="small">Copyright &copy; 2018-2023 Animat Habitat. <a href="../../../c/" target="_blank" title="Animat Habitat &frasl; Terms of Access">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'access.</font></p>
+        <!-- <div class="clear small">
+          <p>All included dimensions.<font class="fr">&nbsp;&#92;&nbsp;Toutes les dimensions incluses.</font></p>
+
+          <p class="linebreak">Ultra HD: 3840&nbsp;&times;&nbsp;2160 px</p>
+          <p>QHD: 2560&nbsp;&times;&nbsp;1440 px</p>
+          <p>Full HD: 1920&nbsp;&times;&nbsp;1080 px</p>
+          <p>Standard HD: 1280&nbsp;&times;&nbsp;720 px</p>
+
+          <p class="linebreak">iPhone Plus: 1080&nbsp;&times;&nbsp;1920 px</p>
+          <p>iPhone: 750&nbsp;&times;&nbsp;1334 px</p>
+          <p>iPhone SE: 640&nbsp;&times;&nbsp;1136 px</p>
+        </div> -->
+
+        <p class="linebreak small">Copyright &copy; 2018-2023 Animat Habitat. <a href="../../../c/" target="_blank" title="Animat Habitat &frasl; Terms of Access">Terms of Access</a>.<font class="fr">&nbsp;&#92;&nbsp;Conditions d'access.</font></p>
 
       </div>
 
