--- a/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
+++ b/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
@@ -29,6 +29,7 @@
       <li class="crumb dark"><a href="../" title="Animat Habitat boutique. Digital editions. &ndash;&nbsp;&Eacute;ditions num&eacute;riques.">Digital</a></li>
       <li class="crumb active dark"><a><em>Magnificent Seven</em></a></li>
       <li class="right thin"><a onclick="fr();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="right thin"><a class="title" onclick="currency();" title="Animat Habitat ."><font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font><font class="paypal-us">CA&nbsp;&#92;&nbsp;<b class="overscore">US</b></font>&nbsp;<font class="currency-symbol">&#36;</font></a></li>
     </ul>
   </nav>
 
@@ -94,28 +95,26 @@
 
           <div>
             <h2 class="title">Magnificent Seven</h2>
-            <!-- <h5 class="woo-tag">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <em>Last of the Big Tuskers</em></h5> -->
-            <h5 class="author">Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</h5>
+            <h5 class="woo-tag">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <em>Last of the Big Tuskers</em>.</h5>
+            <h5 class="author">Digital painting by Dane Aleksander.<font class="fr">&nbsp;&#92;&nbsp;Peinture num&eacute;rique par Dane Aleksander.</font></h5>
 
-            <p class="linebreak">The complete collection of digital paintings painted in the making of <em>Last of the Big Tuskers</em> (documentary film, 2018). The collection includes a range of resolutions<!-- fit to the aspect ratio of widescreen monitors and device formats-->.<font class="fr">&nbsp;&#92;&nbsp;La collection compl&egrave;te de peintures num&eacute;riques peintes lors de la r&eacute;alisation du film documentaire <em>Last of the Big Tuskers</em>. La collection comprend une gamme de r&eacute;solutions<!-- adapt&eacute;es au rapport d'aspect des moniteurs &agrave; &eacute;cran large et des formats d'appareils-->.</font></p>
+            <p class="linebreak">The complete collection of digital paintings painted in the making of <em>Last of the Big Tuskers</em> (documentary film, 2018). The collection includes a range of resolutions.<font class="fr">&nbsp;&#92;&nbsp;La collection compl&egrave;te de peintures num&eacute;riques peintes lors de la r&eacute;alisation du film documentaire <em>Last of the Big Tuskers</em>. La collection comprend une gamme de r&eacute;solutions.</font></p>
+
+            <!-- fit to the aspect ratio of widescreen monitors and device formats -->
+            <!-- adapt&eacute;es au rapport d'aspect des moniteurs &agrave; &eacute;cran large et des formats d'appareils -->
+
           </div>
 
           <div class="gutter-tobo diptych">
 
             <div class="gutter-side">
-              <h5><font class="overscore">Digital Editions</font><font class="fr">&nbsp;&#92;&nbsp;&Eacute;ditions num&eacute;riques</font></h5>
-              <p>Dimension: Ultra HD</p>
+              <h5>Digital Editions<font class="fr">&nbsp;&#92;&nbsp;&Eacute;ditions num&eacute;riques</font></h5>
+              <p>Dimension: 3840&nbsp;&times;&nbsp;2160 px</p>
               <div class="small">
-                <p>All included dimensions<font class="fr">&nbsp;&#92;&nbsp;Toutes les dimensions incluses</font></p>
-                <p>Ultra HD: 3840 &times; 2160 px</p>
-                <p>QHD: 2560 &times; 1440 px</p>
-                <p>Full HD: 1920 &times; 1080 px</p>
-                <p>Standard HD: 1280 &times; 720 px</p>
-                <p>iPhone Plus: 1080 &times; 1920 px</p>
-                <p>iPhone: 750 &times; 1334 px</p>
-                <p>iPhone SE: 640 &times; 1136 px</p>
+                <p>All included format collections:<font class="fr">&nbsp;&#92;&nbsp;Toutes les collections de formats inclus&nbsp;:</font></p>
+                <p>Ultra HD, iPad/iPhone.</p>
               </div>
-              <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> CA<font class="woo-currency-symbol">&#36;</font><font class="price">7</font></p>
+              <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">7</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">7</font></font></p>
               <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0110 0111</font></p>
               <p>Publication Date:<font class="fr">&nbsp;&#92;&nbsp;Date de parution&nbsp;:</font> 12.2018</p>
 
@@ -162,11 +161,19 @@
 
             <h5 class="woo-article-title"><font class="title">Magnificent Seven</font> <font class="small">Collection of<font class="fr">&nbsp;&#92;&nbsp;de</font> 7</font></font></h5>
 
-            <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+            <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
               <input type="hidden" name="cmd" value="_s-xclick">
               <input type="hidden" name="hosted_button_id" value="YYMLB9P3487MY">
-              <button type="submit" name="submit" alt="Magnificent Seven Digital Edition (Collection)">Purchase<font class="fr">&nbsp;&#92;&nbsp;Acheter<font class="break-cut"> cet article</font></font></button>
+              <button type="submit" name="submit" alt="Magnificent Seven Digital Edition (Collection)">Purchase<font class="fr">&nbsp;&#92;&nbsp;Acheter<font class="break-cut"> cet article </font></font></button>
+
+            </form>
+
+            <form class="paypal-us" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+
+              <input type="hidden" name="cmd" value="_s-xclick">
+              <input type="hidden" name="hosted_button_id" value="S5NQH2U7MDVX4">
+              <button type="submit" name="submit" alt="Magnificent Seven Digital Edition (Collection)">Purchase</button>
 
             </form>
 
@@ -199,6 +206,7 @@
 <script>
 
   var r = document.querySelector(':root'),
+      toggle_currency = 0,
       toggle_fr = 0,
       img_isilo = document.getElementById("preview-isilo"),
       img_kamboyo = document.getElementById("preview-kamboyo"),
@@ -208,6 +216,7 @@
       img_tim = document.getElementById("preview-tim"),
       img_craig = document.getElementById("preview-craig");
 
+  r.style.setProperty('--us', "none");
   r.style.setProperty('--fr', "none");
 
   img_isilo.style.display = img_kamboyo.style.display = img_masthulele.style.display = img_one_ton.style.display = img_satao.style.display = img_tim.style.display = img_craig.style.display = "none";
@@ -296,10 +305,29 @@
     }
   };
 
+  function currency() {
+    if ( toggle_currency == 0 ) {
+      r.style.setProperty('--us', "inline");
+      r.style.setProperty('--ca', "none");
+      r.style.setProperty('--fr', "none");
+      r.style.setProperty('--fr-en', "inline");
+      toggle_currency = 1;
+      toggle_fr = 0;
+    }
+    else {
+      r.style.setProperty('--us', "none");
+      r.style.setProperty('--ca', "inline");
+      toggle_currency = 0;
+    }
+  };
+
   function fr() {
     if ( toggle_fr == 0 ) {
+      r.style.setProperty('--us', "none");
+      r.style.setProperty('--ca', "inline");
       r.style.setProperty('--fr', "inline");
       r.style.setProperty('--fr-en', "none");
+      toggle_currency = 0;
       toggle_fr = 1;
     }
     else {
