--- a/boutique/medium/giclee/one-ton/index.html
+++ b/boutique/medium/giclee/one-ton/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat boutique. Gicl&eacute;e prints. &ndash;&nbsp;Gicl&eacute;es. Last of the Big Tuskers &ndash; Craig (2018).</title>
+  <title>Animat Habitat boutique. Gicl&eacute;e prints. &ndash;&nbsp;Gicl&eacute;es. Last of the Big Tuskers &ndash; One Ton (2018).</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../../inc/css/dark.light.unicorn.css" />
@@ -27,7 +27,7 @@
       <li class="crumb dark logo"><a href="../../../../" title="Animat Habitat"><img alt="OAFA Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../../inc/svg/oafa.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb dark"><a href="../../../" title="Animat Habitat boutique.">Boutique</a></li>
       <li class="crumb dark"><a href="../" title="Animat Habitat boutique. Gicl&eacute;e prints. &ndash;&nbsp;Gicl&eacute;es.">Gicl&eacute;e</a></li>
-      <li class="crumb active dark"><a><em>Craig</em></a></li>
+      <li class="crumb active dark"><a><em>One Ton</em></a></li>
       <li class="right thin"><a onclick="fr();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
       <li class="right thin"><a class="title" onclick="currency();" title="Animat Habitat ."><font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font><font class="paypal-us">CA&nbsp;&#92;&nbsp;<b class="overscore">US</b></font>&nbsp;<font class="currency-symbol">&#36;</font></a></li>
     </ul>
@@ -45,7 +45,7 @@
   <div class="clear preview" id="preview">
     <a onclick="preview();">
       <div class="quote">
-        <img alt="Last of the Big Tuskers (2018) &ndash; Craig [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.1440-864.jpg" />
+        <img alt="Last of the Big Tuskers (2018) &ndash; One Ton [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.1440-864.jpg" />
       </div>
     </a>
 
@@ -53,19 +53,18 @@
 
   <div class="clear color">
 
-    <section id="product-0117" class="product">
+    <section id="product-0114" class="product">
 
       <div class="clear type-product">
 
         <div class="clear ptych-center product-summary">
 
           <div>
-            <h2 class="title">Craig</h2>
+            <h2 class="title">One Ton</h2>
             <h5 class="woo-tag">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <em>Last of the Big Tuskers</em>.</h5>
             <h5 class="author">Digital painting by Dane Aleksander.<font class="fr">&nbsp;&#92;&nbsp;Peinture num&eacute;rique par Dane Aleksander.</font></h5>
 
-            <p class="linebreak">&ldquo;Craig&rdquo; is one of a collection of digital paintings painted in the making of <em>Last of the Big Tuskers</em> (documentary film, 2018). This digital painting is printed in limited edition as an archival pigment print on acid-free archival paper, and printed with a half-inch unprinted matte to allow for safe handling as well as for framing options. The archival pigment prints are available in two sizes.<font class="fr">&nbsp;&#92;&nbsp;&laquo;&nbsp;Craig&nbsp;&raquo; fait partie d'une collection de peintures num&eacute;riques peintes lors de la r&eacute;alisation du film documentaire <em>Last of the Big Tuskers</em>. Cette peinture num&eacute;rique est imprim&eacute; en &eacute;dition limit&eacute;e en tant que tirages pigmentaires d'archives sur papier d'archivage sans acide, et c'est imprim&eacute; avec une mate de demi-pouce non imprim&eacute;e pour permettre une manipulation en toute s&eacute;curit&eacute; ainsi que des options de cadrage. Les tirages pigmentaires d'archives sont disponibles en deux tailles.</font></p>
-
+            <p class="linebreak">&ldquo;One Ton&rdquo; is one of a collection of digital paintings painted in the making of <em>Last of the Big Tuskers</em> (documentary film, 2018). This digital painting is printed in limited edition as an archival pigment print on acid-free archival paper, and printed with a half-inch unprinted matte to allow for safe handling as well as for framing options. The archival pigment prints are available in two sizes.<font class="fr">&nbsp;&#92;&nbsp;&laquo;&nbsp;One Ton&nbsp;&raquo; fait partie d'une collection de peintures num&eacute;riques peintes lors de la r&eacute;alisation du film documentaire <em>Last of the Big Tuskers</em>. Cette peinture num&eacute;rique est imprim&eacute; en &eacute;dition limit&eacute;e en tant que tirages pigmentaires d'archives sur papier d'archivage sans acide, et c'est imprim&eacute; avec une mate de demi-pouce non imprim&eacute;e pour permettre une manipulation en toute s&eacute;curit&eacute; ainsi que des options de cadrage. Les tirages pigmentaires d'archives sont disponibles en deux tailles.</font></p>
           </div>
 
           <div class="gutter-tobo diptych">
@@ -78,7 +77,7 @@
                 <p>11&nbsp;&times;&nbsp;7 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
               </div>
               <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">100</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">75</font></font></p>
-              <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0117 1111</font></p>
+              <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0114 1111</font></p>
               <p>Publication Date:<font class="fr">&nbsp;&#92;&nbsp;Date de parution&nbsp;:</font> 12.2018</p>
 
             </div>
@@ -91,7 +90,7 @@
                 <p>17&nbsp;&times;&nbsp;11 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
               </div>
               <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">200</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">150</font></font></p>
-              <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0117 1121</font></p>
+              <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0114 1121</font></p>
               <p>Publication Date:<font class="fr">&nbsp;&#92;&nbsp;Date de parution&nbsp;:</font> 12.2018</p>
 
             </div>
@@ -105,8 +104,8 @@
           <div>
             <div class="preview-thumbnail" id="preview-thumbnail">
               <a onclick="preview();">
-                <img alt="Last of the Big Tuskers (2018) &ndash; Craig [thumbnail]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.300-180.jpg" /></a>
-              <p class="text-right"><em>Craig</em> &ndash; Amboseli National Park, Kenya</p>
+                <img alt="Last of the Big Tuskers (2018) &ndash; One Ton [thumbnail]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.300-180.jpg" /></a>
+              <p class="text-right"><em>One Ton</em> &ndash; Chyulu Hills National Park, Kenya</p>
             </div>
           </div>
 
@@ -115,79 +114,8 @@
         <div class="clear ptych-right product-stock">
 
           <div>
-            <h4 class="in-stock"><font class="thin">In print!<font class="fr">&nbsp;&#92;&nbsp;En imprimerie !</font></font></h4>
-            <h5 class="stock woo-article">Two sizes available for purchase with PayPal or with Debit or Credit Card.<font class="fr">&nbsp;&#92;&nbsp;Deux tailles disponibles &agrave; l'achat avec PayPal ou par carte de d&eacute;bit ou de cr&eacute;dit.</font></h5>
 
-            <h5 class="woo-article-title"><font class="title">Craig</font> 12&nbsp;&times;&nbsp;8 <font class="small">Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 10</font></h5>
-
-            <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-
-              <input type="hidden" name="cmd" value="_s-xclick">
-              <input type="hidden" name="hosted_button_id" value="UFFZ3HF735TLU">
-
-              <input type="hidden" name="on0" value="Shipping \ Livraison">
-              <select name="os0">
-                <option value="Canada">Canada Post</option>
-                <option value="International">International &plus;50&nbsp;&#36;&nbsp;CA</option>
-              </select>
-
-              <input type="hidden" name="currency_code" value="CAD">
-              <button type="submit" name="submit" alt="Craig [12&nbsp;&times;&nbsp;8] (Gicl&eacute;e)">Purchase<font class="fr">&nbsp;&#92;&nbsp;Acheter<font class="break-cut"> cet article</font></font></button>
-
-            </form>
-
-            <form class="paypal-us" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-
-              <input type="hidden" name="cmd" value="_s-xclick">
-              <input type="hidden" name="hosted_button_id" value="94FFAKFZW2EVY">
-
-              <input type="hidden" name="currency_code" value="USD">
-              <button type="submit" name="submit" alt="Craig [12&nbsp;&times;&nbsp;8] (Gicl&eacute;e)">Purchase</button>
-
-            </form>
-          </div>
-
-          <div>
-
-            <h5 class="woo-article-title"><font class="title">Craig</font> 18&nbsp;&times;&nbsp;12 <font class="small">Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 10</font></h5>
-
-            <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-
-              <input type="hidden" name="cmd" value="_s-xclick">
-              <input type="hidden" name="hosted_button_id" value="UQ5DSV76BT926">
-
-              <input type="hidden" name="on0" value="Shipping \ Livraison">
-              <select name="os0">
-                <option value="Canada">Canada Post</option>
-                <option value="International">International &plus;50&nbsp;&#36;&nbsp;CA</option>
-              </select>
-
-              <input type="hidden" name="currency_code" value="CAD">
-              <button type="submit" name="submit" alt="Craig [18&nbsp;&times;&nbsp;12] (Gicl&eacute;e)">Purchase<font class="fr">&nbsp;&#92;&nbsp;Acheter<font class="break-cut"> cet article</font></font></button>
-
-            </form>
-
-            <form class="paypal-us" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-
-              <input type="hidden" name="cmd" value="_s-xclick">
-              <input type="hidden" name="hosted_button_id" value="D9WQ7J982LR94">
-
-              <input type="hidden" name="currency_code" value="USD">
-              <button type="submit" name="submit" alt="Craig [18&nbsp;&times;&nbsp;12] (Gicl&eacute;e)">Purchase</button>
-
-            </form>
-
-            <div class="clear paypal-ca">
-              <p class="linebreak small">Shipping within Canada is included.<font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition au Canada est incluse.</font></p>
-              <p class="linebreak small">Please select the <u>International</u> option for shipping outside Canada.<font class="fr">&nbsp;&#92;&nbsp;Veuillez s&eacute;lectionner l'option <u>Internationale</u> pour l'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada.</font></p>
-              <p class="linebreak small">International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat &frasl; Terms of Purchase">Terms of Purchase</a><font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada est limit&eacute;e aux pays r&eacute;pertori&eacute;s comme disponibles pour l'exp&eacute;dition international dans les conditions d'achat de la boutique.</font></p>
-
-            </div>
-
-            <div class="clear paypal-us">
-              <p class="linebreak small">International shipping to the contiguous United States is included in the US<font class="currency-symbol">&#36;</font> list price.</p>
-
-            </div>
+            <h5 class="stock woo-article">No longer available in print.<font class="fr">&nbsp;&#92;&nbsp;N.est plus disponible en version imprim&eacute;e.</font></h5>
 
           </div>
 
