--- a/conservatum/africa-afrique/index.html
+++ b/conservatum/africa-afrique/index.html
@@ -45,7 +45,7 @@
           <h5><font class="overscore">Conservation in Eastern Africa</font><font class="fr">&nbsp;&#92;&nbsp;en Afrique de l'est</font></h5>
           <ul>
             <li><a href="../../url/-org/elephanttrust/" title="Amboseli Trust for Elephants" target="_blank" rel="noopener">Amboseli Trust for Elephants</a>, <em>Kenya</em></li>
-            <li><a href="../../url/-org/biglife/" title="" target="_blank" rel="noopener">Big Life Foundation</a>, <em>Kenya</em></li>
+            <li><a href="../../url/-org/biglife/" title="Big Life Foundation" target="_blank" rel="noopener">Big Life Foundation</a>, <em>Kenya</em></li>
             <li><a href="../../url/-org/lewa/" title="LEWA" target="_blank" rel="noopener">Lewa Wildlife Conservancy</a>, <em>Kenya</em></li>
             <li><a href="../../url/-org/mountkenyatrust/" title="Mount Kenya Trust" target="_blank" rel="noopener">Mount Kenya Trust</a>, <em>Kenya</em></li>
             <li><a href="../../url/-org/sheldrickwildlifetrust/" title="SWT" target="_blank" rel="noopener">Sheldrick Wildlife Trust</a>, <em>Kenya</em></li>
@@ -74,7 +74,7 @@
             <li><a href="../../url/-org/ehranamibia/" title="EHRA" target="_blank" rel="noopener">Elephant-Human Relations Aid</a>, <em>Namibia</em></li>
             <li><a href="../../url/-org/elephantswithoutborders/" title="EWB" target="_blank" rel="noopener">Elephants Without Borders</a>, <em>Botswana</em></li>
             <li><a href="../../url/-org/nationalgeographic-okavango/" title="NGOWP" target="_blank" rel="noopener">Okavango Wilderness Project</a>, <em>Angola</em>, <em>Botswana</em>, <em>Namibia</em></li>
-            <li><a href="../../url/-org/zamsoc/" title="" target="_blank" rel="noopener">The Zambezi Society</a>, <em>Zimbabwe</em></li>
+            <li><a href="../../url/-org/zamsoc/" title="The Zambezi Society" target="_blank" rel="noopener">The Zambezi Society</a>, <em>Zimbabwe</em></li>
 
           </ul>
 
