--- a/conservatum/index.html
+++ b/conservatum/index.html
@@ -65,7 +65,7 @@
           <ul>
             <li><a href="../url/-org/iucn/" title="IUCN" target="_blank" rel="noopener">International Union for Conservation of Nature</a></li>
             <li><a href="../url/-org/wcs/" title="WCS" target="_blank" rel="noopener">Wildlife Conservation Society</a></li>
-            <li><a href="../url/-org/wildlife/" title="" target="_blank" rel="noopener">The Wildlife Society</a></li>
+            <li><a href="../url/-org/wildlife/" title="The Wildlife Society" target="_blank" rel="noopener">The Wildlife Society</a></li>
           </ul>
         </div>
 
@@ -81,7 +81,7 @@
           <ul>
             <li><a href="../url/-org/bornfree/" title="Born Free" target="_blank" rel="noopener">Born Free Foundation</a></li>
             <li><a href="../url/-org/conservation/" title="Conservation International" target="_blank" rel="noopener">Conservation International</a></li>
-            <li><a href="../url/-org/fauna-flora/" title="" target="_blank" rel="noopener">Fauna and Flora International</a></li>
+            <li><a href="../url/-org/fauna-flora/" title="Fauna and Flora International" target="_blank" rel="noopener">Fauna and Flora International</a></li>
             <li><a href="../url/-org/ifaw/" title="IFAW" target="_blank" rel="noopener">International Fund for Animal Welfare</a></li>
             <li><a href="../url/-org/nature/" title="The Nature Conservancy" target="_blank" rel="noopener">The Nature Conservancy</a></li>
             <li><a href="../url/-org/wildnet/" title="WCN" target="_blank" rel="noopener">Wildlife Conservation Network</a></li>
