--- a/scene/one/elephant-anatomy/index.html
+++ b/scene/one/elephant-anatomy/index.html
@@ -155,7 +155,7 @@
           <p class="small"><sup>4</sup> Poole, J. Granli, P. How Elephants Communicate. Elephant Voices. <a href="../../../url/-org/elephantvoices-elephant-communication/" title="Elephant Voices /  Elephant Communication" target="_blank" rel="noopener">Website Link</a></p>
           <p class="small"><sup>5</sup> Poole, J. Granli, P. Elephant Gestures Database. Elephant Voices. <a href="../../../url/-org/elephantvoices/" title="Elephant Voices" target="_blank" rel="noopener">Website Link</a></p>
           <p class="small"><sup>6</sup> Elephants: Interesting Facts. International Elephant Foundation. <a href="../../../url/-org/elephantconservation-facts/" title="IEF / Elephants: Interesting Facts" target="_blank" rel="noopener">Website Link</a></p>
-          <p class="small"><sup>7</sup> Laursen, L. Bekoff, M. 1978. Loxodonta africana. <em>Mammalian Species</em> Vol.92: 1-8. <a href="../../../url/doi/10-2307-3503889/" title="" target="_blank" rel="noopener">Website Link</a></p>
+          <p class="small"><sup>7</sup> Laursen, L. Bekoff, M. 1978. Loxodonta africana. <em>Mammalian Species</em> Vol.92: 1-8. <a href="../../../url/doi/10-2307-3503889/" title="Digital Object Identifier / Mammalian Species Vol.92: 1-8" target="_blank" rel="noopener">Website Link</a></p>
 
         </div>
       </div>
