--- a/scene/one/making-of-ella-4/index.html
+++ b/scene/one/making-of-ella-4/index.html
@@ -43,7 +43,7 @@
       </div>
 
       <div>
-        <h3 class="">Ella, African Savanna Elephant</h3>
+        <h3>Ella, African Savanna Elephant</h3>
         <p>Elephants are an umbrella species. They are ecosystem engineers. Biodiversity cascades from their presence. Elephants are a keystone species in Africa. The elephant is an iconic symbol of the continent. When we think of Africa, we most often think of elephants. They are a symbol of power and strength, memory and wisdom, good luck and so on. If we as a people are unable, or unwilling, to save the smartest, largest, greatest land-living mammal in the world &ndash; a species that has roamed the earth for millions of years &ndash; then it is unclear what hope remains for other animals. This is where our story begins.</p>
 
         <p class="linebreak">Meet Ella, the elephant.</p>
