--- a/scene/two/the-second-chapter/index.html
+++ b/scene/two/the-second-chapter/index.html
@@ -103,16 +103,17 @@
 
         <div>
           <img alt="" src="../../../inc/img/02/color/wt.green.4.png">
-          <!-- <p class="text-right gutter-side">Green [<a href="../../../url/com/paratype-rodchenko/" rel="noopener" target="_blank" title="ParaType / Fonts / Rodchenko">paratype.com</a>, recolored]</p> -->
         </div>
 
       </div>
 
       <div>
         <h3>The Second Color</h3>
-        <p>Type design is a matter of functionality, history and style. Typography is a unique design space without content, wherein associations inhere within the letterforms. These associations take hold with time and with a pattern of use. A pattern can become so practiced in a culture that this practice shapes a relationship to the typeface. To begin the second chapter at Animat Habitat, we have designed a second project identity with a pattern of use for type and color.</p>
+        <p>Font is a matter of functionality, history and style. Typography is a unique design space without content, wherein associations inhere within the letterforms. These associations take hold with time and with a pattern of use. A pattern can become so practiced in a culture that this practice shapes a relationship to the typeface. To begin the second chapter at Animat Habitat, we have designed a second project identity with a pattern of use for lettering and coloring.</p>
 
-        <p class="linebreak">Color is a fundamental part of each Animat Habitat project identity, and serves to playfully echo the different scenes. The second color is <em>Pine</em>. The color green echos the evergreens&mdash;the taiga&mdash;the boreal forest habitat that extends across the northern hemisphere. This represents the land of the Amur tiger, as well as the largest swath of Canadian wilderness south of the tundra.</p>
+        <p class="linebreak">Color is a fundamental part of each project identity at Animat Habitat. Each project color is a playful echo of the scene. The second color is <em>Pine</em>. The color green echos the evergreens&mdash;the taiga&mdash;the boreal forest habitat that extends across the northern hemisphere. This represents the land of the Amur tiger, as well as the largest swath of Canadian wilderness south of the tundra.</p>
+
+        <!-- The use / pattern of angles. -->
 
       </div>
 
@@ -132,25 +133,22 @@
 
         <div>
           <img alt="" src="../../../inc/img/02/color/wt.color.4.png">
-          <!-- <p class="text-right gutter-side">Green [<a href="../../../url/com/paratype-rodchenko/" rel="noopener" target="_blank" title="ParaType / Fonts / Rodchenko">paratype.com</a>, recolored]</p> -->
         </div>
 
       </div>
 
       <div>
 
-        <!-- The use / pattern of angles. -->
+        <p>High-value cyan, magenta, yellow colors are designed to feature in the print materials for the exhibition. These modern colors repeat the theme&hellip; <em>The beginning of painting.</em> The right angles and the bright colors are a means to highlight the exhibition, to stand out in a noisy marketplace and to stand apart from the Earth tones of wildlife art. In nature, shapes are less exact and colors are more limited in comparison to the clarity of vector graphics and the purity of modern dyes and inks. This contrast between the art on display and the stationary on the side allows for color to remain representational and for the two art forms to appeal to a diverse aesthetic.</p>
 
-        <p>The high-value cyan, magenta, yellow colors are featured in print materials designed for the exhibition to repeat the theme&hellip; <em>The beginning of painting.</em> The right angles and the bright colors are a means to highlight the exhibition, to stand out in a noisy marketplace and to stand apart from the Earth tones of wildlife art. In nature, shapes are less exact and colors are more limited in comparison to the clarity of vector graphics and the purity of modern inks. This contrast between the art on display and the stationary on the side allows for color to remain representational and for the two to design for different aesthetics.</p>
+        <p class="linebreak">A painting at Animat Habitat begins, like any art studio project, with an idea for a story about wildlife conservation. Each project is designed with medium in mind so that both art and story share a message&mdash;so that the message is clear. For example, this project is an exhibiton of art with themes of Constructivism and nature, and with an oil painting about tiger conservation.</p>
 
-        <p class="linebreak">A painting at Animat Habitat begins, like any art studio project, with an idea for a story about wildlife conservation. Each project is designed with medium in mind so that both art and story share a message&mdash;so that the message is clear. This project is an exhibiton of art with themes of Constructivism and nature, and with an oil painting about tiger conservation.</p>
-
-        <p class="linebreak">There are also the fine art qualities that shape oil color as a medium and present another unique space for artistic expression. For example, the use of perspective in art can express three-dimensional space on a two-dimensional plane. The physicality of painting can express a further dimension within the static visual art&mdash;time. The depth and the weight of each brush stroke can impart an implicit sense of motion. The iterative process of figure on ground &ndash; dark on light and then light on dark and so on &ndash; appears as a record of movement by the painter in front of the canvas in space and time. Oil color in this way presents as a dynamic medium.</p>
+        <p class="linebreak">Also, there are the fine art qualities that shape oil color as a medium and present another unique space for artistic expression. To begin, the use of perspective in art can express three-dimensional space on a two-dimensional plane. The physicality of painting can express a further dimension within this otherwise static visual art. The depth and the weight of each brush stroke can impart an implicit sense of motion. The iterative process of figure on ground &ndash; dark on light and then light on dark and so on &ndash; appears as a record of movement by the painter in front of the canvas in space and in time. Oil color in this way can present as a dynamic medium. Painting is alive and well at Animat Habitat.</p>
 
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>If you do a painting with five strokes instead of ten, you can make the painting sing.</em><font class="color text-quote">&rdquo;</font><font class="color thin"> &mdash;&nbsp;Tyrus Wong</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>If you do a painting with five strokes instead of ten, you can make the painting sing.</em><font class="color text-quote">&rdquo;</font><font class="color thin"> &mdash;&nbsp;Tyrus Wong, <em>Tyrus</em> (documentary film, 2015)</font></h4>
 
         <!-- If there is any kind of magic in this world, it exists in the attempt of understanding someone sharing something. -->
 
