--- a/scene/zero/index.html
+++ b/scene/zero/index.html
@@ -79,8 +79,8 @@
           <div class="clear diptych">
 
             <div>
-              <h5><font class="overscore">Oil Painting</font><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
-              <p>Dimension: 30 &times; 10 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+              <h5>Oil Painting<font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
+              <p>Dimension: 30&nbsp;&times;&nbsp;10 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
               <p>Show Date:<font class="fr">&nbsp;&#92;&nbsp;Date d'exposition&nbsp;:</font> 04.2007</p>
 
             </div>
@@ -119,10 +119,10 @@
     <article>
       <div class="quote">
 
-        <h3><a href="northern-white-rhinoceros/"><font class="">Northern White Rhinoceros</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="northern-white-rhinoceros/">Northern White Rhinoceros<font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="../../url/git/danealeksander-art-ib/"><font class="">Silver Studio Art Show</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="../../url/git/danealeksander-art-ib/">Silver Studio Art Show<font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre>
 
       </div>
