--- a/boutique/medium/giclee/isilo/index.html
+++ b/boutique/medium/giclee/isilo/index.html
@@ -29,6 +29,7 @@
       <li class="crumb dark"><a href="../" title="Animat Habitat boutique. Gicl&eacute;e prints. &ndash;&nbsp;Gicl&eacute;es.">Gicl&eacute;e</a></li>
       <li class="crumb active dark"><a><em>Isilo</em></a></li>
       <li class="right thin"><a onclick="fr();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="right thin"><a class="title" onclick="currency();" title="Animat Habitat ."><font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font><font class="paypal-us">CA&nbsp;&#92;&nbsp;<b class="overscore">US</b></font>&nbsp;<font class="currency-symbol">&#36;</font></a></li>
     </ul>
   </nav>
 
@@ -60,8 +61,8 @@
 
           <div>
             <h2 class="title">Isilo</h2>
-            <!-- <h5 class="woo-tag">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <em>Last of the Big Tuskers</em></h5> -->
-            <h5 class="author">Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</h5>
+            <h5 class="woo-tag">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <em>Last of the Big Tuskers</em>.</h5>
+            <h5 class="author">Digital painting by Dane Aleksander.<font class="fr">&nbsp;&#92;&nbsp;Peinture num&eacute;rique par Dane Aleksander.</font></h5>
 
             <p class="linebreak">&ldquo;Isilo&rdquo; is one of a collection of digital paintings painted in the making of <em>Last of the Big Tuskers</em> (documentary film, 2018). This digital painting is printed in limited edition as an archival pigment print on acid-free archival paper, and printed with a half-inch unprinted matte to allow for safe handling as well as for framing options. The archival pigment prints are available in two sizes.<font class="fr">&nbsp;&#92;&nbsp;&laquo;&nbsp;Isilo&nbsp;&raquo; fait partie d'une collection de peintures num&eacute;riques peintes lors de la r&eacute;alisation du film documentaire <em>Last of the Big Tuskers</em>. Cette peinture num&eacute;rique est imprim&eacute; en &eacute;dition limit&eacute;e en tant que tirages pigmentaires d'archives sur papier d'archivage sans acide, et c'est imprim&eacute; avec une mate de demi-pouce non imprim&eacute;e pour permettre une manipulation en toute s&eacute;curit&eacute; ainsi que des options de cadrage. Les tirages pigmentaires d'archives sont disponibles en deux tailles.</font></p>
           </div>
@@ -69,26 +70,26 @@
           <div class="gutter-tobo diptych">
 
             <div class="gutter-side">
-              <h5><font class="overscore">Limited Edition Gicl&eacute;e</font><font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
-              <p>Dimension: 12 &times; 8 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+              <h5>Limited Edition Gicl&eacute;e<font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
+              <p>Dimension: 12&nbsp;&times;&nbsp;8 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
               <div class="small">
-                <p>Dimension sans matte<font class="fr">&nbsp;&#92;&nbsp;mat</font></p>
-                <p>11 &times; 7 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+                <p>Print area within matte:<font class="fr">&nbsp;&#92;&nbsp;Zone d'impression dans le cache&nbsp;:</font></p>
+                <p>11&nbsp;&times;&nbsp;7 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
               </div>
-              <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> CA<font class="woo-currency-symbol">&#36;</font><font class="price">100</font></p>
+              <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">100</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">125</font></font></p>
               <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0111 1111</font></p>
               <p>Publication Date:<font class="fr">&nbsp;&#92;&nbsp;Date de parution&nbsp;:</font> 12.2018</p>
 
             </div>
 
             <div class="gutter-side">
-              <h5><font class="overscore">Limited Edition Gicl&eacute;e</font><font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
-              <p>Dimension: 18 &times; 12 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+              <h5>Limited Edition Gicl&eacute;e<font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
+              <p>Dimension: 18&nbsp;&times;&nbsp;12 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
               <div class="small">
-                <p>Dimension sans matte<font class="fr">&nbsp;&#92;&nbsp;mat</font></p>
-                <p>17 &times; 11 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+                <p>Print area within matte:<font class="fr">&nbsp;&#92;&nbsp;Zone d'impression dans le cache&nbsp;:</font></p>
+                <p>17&nbsp;&times;&nbsp;11 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
               </div>
-              <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> CA<font class="woo-currency-symbol">&#36;</font><font class="price">200</font></p>
+              <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">200</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">200</font></font></p>
               <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0111 1121</font></p>
               <p>Publication Date:<font class="fr">&nbsp;&#92;&nbsp;Date de parution&nbsp;:</font> 12.2018</p>
 
@@ -113,51 +114,79 @@
         <div class="clear ptych-right product-stock">
 
           <div>
+            <h4 class="in-stock"><font class="thin">In print!<font class="fr">&nbsp;&#92;&nbsp;En imprimerie !</font></font></h4>
+            <h5 class="stock woo-article">Two sizes available for purchase with PayPal or with Debit or Credit Card.<font class="fr">&nbsp;&#92;&nbsp;Deux tailles disponibles &agrave; l'achat avec PayPal ou par carte de d&eacute;bit ou de cr&eacute;dit.</font></h5>
 
-            <h4 class="in-stock"><font class="thin">In printing!<font class="fr">&nbsp;&#92;&nbsp;En imprimerie !</font></font></h4>
-            <h5 class="stock woo-article">Two sizes available for purchase via PayPal.<font class="fr">&nbsp;&#92;&nbsp;Deux tailles disponibles &agrave; l'achat.</font></h5>
+            <h5 class="woo-article-title"><font class="title">Isilo</font> 12&nbsp;&times;&nbsp;8 <font class="small">Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 10</font></h5>
 
-            <h5 class="woo-article-title"><font class="title">Isilo</font> <font class="small">Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 10</font></h5>
-
-            <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+            <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
               <input type="hidden" name="cmd" value="_s-xclick">
               <input type="hidden" name="hosted_button_id" value="PREG3BZB6LS7U">
 
-              <input type="hidden" name="on0" value="Isilo, 12 &plus; Shipping \ Livraison">
+              <input type="hidden" name="on0" value="Shipping \ Livraison">
               <select name="os0">
-                <option value="Canada">12 &times; 8 (Canada)</option>
-                <option value="International">12 &times; 8 (International, &plus;CA$50)</option>
+                <option value="Canada">Canada Post</option>
+                <option value="International">International &plus;50&nbsp;&#36;&nbsp;CA</option>
               </select>
 
               <input type="hidden" name="currency_code" value="CAD">
-              <button type="submit" name="submit" alt="Isilo [12 &times; 8] (Gicl&eacute;e)">Purchase<font class="fr">&nbsp;&#92;&nbsp;Acheter<font class="break-cut"> cet article</font></font></button>
+              <button type="submit" name="submit" alt="Isilo [12&nbsp;&times;&nbsp;8] (Gicl&eacute;e)">Purchase<font class="fr">&nbsp;&#92;&nbsp;Acheter<font class="break-cut"> cet article</font></font></button>
 
             </form>
 
-            <br>
+            <form class="paypal-us" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
-            <h5 class="woo-article-title"><font class="title">Isilo</font> <font class="small">Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 15</font></h5>
+              <input type="hidden" name="cmd" value="_s-xclick">
+              <input type="hidden" name="hosted_button_id" value="RH3JNPASFDHGL">
 
-            <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+              <input type="hidden" name="currency_code" value="USD">
+              <button type="submit" name="submit" alt="Isilo [12&nbsp;&times;&nbsp;8] (Gicl&eacute;e)">Purchase</button>
+
+            </form>
+          </div>
+
+          <div>
+
+            <h5 class="woo-article-title"><font class="title">Isilo</font> 18&nbsp;&times;&nbsp;12 <font class="small">Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 10</font></h5>
+
+            <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
               <input type="hidden" name="cmd" value="_s-xclick">
               <input type="hidden" name="hosted_button_id" value="FJ8GUHG3YVJMG">
 
-              <input type="hidden" name="on0" value="Isilo, 18 &plus; Shipping \ Livraison">
+              <input type="hidden" name="on0" value="Shipping \ Livraison">
               <select name="os0">
-                <option value="Canada">18 &times; 12 (Canada)</option>
-                <option value="International">18 &times; 12 (International, &plus;CA$50)</option>
+                <option value="Canada">Canada Post</option>
+                <option value="International">International &plus;50&nbsp;&#36;&nbsp;CA</option>
               </select>
 
               <input type="hidden" name="currency_code" value="CAD">
-              <button type="submit" name="submit" alt="Isilo [18 &times; 12] (Gicl&eacute;e)">Purchase<font class="fr">&nbsp;&#92;&nbsp;Acheter<font class="break-cut"> cet article</font></font></button>
+              <button type="submit" name="submit" alt="Isilo [18&nbsp;&times;&nbsp;12] (Gicl&eacute;e)">Purchase<font class="fr">&nbsp;&#92;&nbsp;Acheter<font class="break-cut"> cet article</font></font></button>
 
             </form>
 
-            <p class="linebreak small">Shipping within Canada is included.<font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition au Canada est incluse.</font></p>
-            <p class="linebreak small">Please select the <u>International</u> option for shipping outside Canada.<font class="fr">&nbsp;&#92;&nbsp;Veuillez s&eacute;lectionner l'option <u>Internationale</u> pour l'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada.</font></p>
-            <p class="linebreak small">International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat &frasl; Terms of Purchase">Terms of Purchase</a><font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada est limit&eacute;e aux pays r&eacute;pertori&eacute;s comme disponibles pour l'exp&eacute;dition international dans les conditions d'achat de la boutique.</font></p>
+            <form class="paypal-us" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+
+              <input type="hidden" name="cmd" value="_s-xclick">
+              <input type="hidden" name="hosted_button_id" value="G2S2UNN3GBNQE">
+
+              <input type="hidden" name="currency_code" value="USD">
+              <button type="submit" name="submit" alt="Isilo [18&nbsp;&times;&nbsp;12] (Gicl&eacute;e)">Purchase</button>
+
+            </form>
+
+            <div class="clear paypal-ca">
+              <p class="linebreak small">Shipping within Canada is included.<font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition au Canada est incluse.</font></p>
+              <p class="linebreak small">Please select the <u>International</u> option for shipping outside Canada.<font class="fr">&nbsp;&#92;&nbsp;Veuillez s&eacute;lectionner l'option <u>Internationale</u> pour l'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada.</font></p>
+              <p class="linebreak small">International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat &frasl; Terms of Purchase">Terms of Purchase</a><font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada est limit&eacute;e aux pays r&eacute;pertori&eacute;s comme disponibles pour l'exp&eacute;dition international dans les conditions d'achat de la boutique.</font></p>
+
+            </div>
+
+            <div class="clear paypal-us">
+              <p class="linebreak small">International shipping to the contiguous United States is included in the US<font class="currency-symbol">&#36;</font> list price.</p>
+
+            </div>
 
           </div>
 
@@ -184,10 +213,12 @@
 <script>
 
   var r = document.querySelector(':root'),
+      toggle_currency = 0,
       toggle_fr = 0,
       img = document.getElementById("preview"),
       tmb = document.getElementById("preview-thumbnail");
 
+  r.style.setProperty('--us', "none");
   r.style.setProperty('--fr', "none");
 
   img.style.display = "none";
@@ -205,10 +236,29 @@
     }
   };
 
+  function currency() {
+    if ( toggle_currency == 0 ) {
+      r.style.setProperty('--us', "inline");
+      r.style.setProperty('--ca', "none");
+      r.style.setProperty('--fr', "none");
+      r.style.setProperty('--fr-en', "inline");
+      toggle_currency = 1;
+      toggle_fr = 0;
+    }
+    else {
+      r.style.setProperty('--us', "none");
+      r.style.setProperty('--ca', "inline");
+      toggle_currency = 0;
+    }
+  };
+
   function fr() {
     if ( toggle_fr == 0 ) {
+      r.style.setProperty('--us', "none");
+      r.style.setProperty('--ca', "inline");
       r.style.setProperty('--fr', "inline");
       r.style.setProperty('--fr-en', "none");
+      toggle_currency = 0;
       toggle_fr = 1;
     }
     else {
