--- a/boutique/medium/original/winter-wind-2008/index.html
+++ b/boutique/medium/original/winter-wind-2008/index.html
@@ -60,7 +60,7 @@
 
           <div>
             <h2 class="title">Winter Wind</h2>
-            <h5 class="author">Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</h5>
+            <h5 class="author">Graphic pencil drawing by Dane Aleksander.<font class="fr">&nbsp;&#92;&nbsp;Dessin au crayon graphique par Dane Aleksander.</font></h5>
 
             <p class="linebreak">&ldquo;Winter Wind&rdquo; is a drawing of a ram resting on an empty hillside, drawn with graphic pencil on paper. The original artwork is matted and framed.<font class="fr">&nbsp;&#92;&nbsp;&laquo;&nbsp;Winter Wind&nbsp;&raquo; est un dessin d'un b&eacute;lier pos&eacute; sur une colline vide, dessin&eacute; au crayon graphique sur papier. L'&#156;uvre originale est emm&ecirc;l&eacute;e et encadr&eacute;e.</font></p>
           </div>
@@ -68,13 +68,13 @@
           <div class="gutter-tobo diptych">
 
             <div class="gutter-side">
-              <h5><font class="overscore">Graphic Pencil</font><font class="fr">&nbsp;&#92;&nbsp;Crayon graphique</font></h5>
-              <p>Dimension: 8.5 &times; 4.25 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+              <h5>Graphic Pencil<font class="fr">&nbsp;&#92;&nbsp;Crayon graphique</font></h5>
+              <p>Dimension: 8.5&nbsp;&times;&nbsp;4.25 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
               <div class="small">
                 <p>Dimension of frame<font class="fr">&nbsp;&#92;&nbsp;Dimension du cadre</font></p>
-                <p>11.625 &times; 7.375 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+                <p>11.625&nbsp;&times;&nbsp;7.375 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
               </div>
-              <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> CA<font class="woo-currency-symbol">&#36;</font><font class="price">500</font></p>
+              <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">500</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">400</font></font></p>
               <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0005 0000</font></p>
               <p>Publication Date:<font class="fr">&nbsp;&#92;&nbsp;Date de parution&nbsp;:</font> 09.2008</p>
 
@@ -105,14 +105,14 @@
 
             <h5 class="woo-article-title"><font class="title">Winter Wind</font> <font class="small">Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 1</font></h5>
 
-            <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
               <input type="hidden" name="cmd" value="_s-xclick">
               <input type="hidden" name="hosted_button_id" value="TU39UNLMCY9VU">
 
               <input type="hidden" name="on0" value="Winter Wind &plus; Shipping \ Livraison">
               <select name="os0">
-                <option value="Canada">Canada</option>
+                <option value="Canada">Canada Post</option>
                 <option value="International">International, &plus;CA$50</option>
               </select>
 
@@ -173,8 +173,11 @@
 
   function fr() {
     if ( toggle_fr == 0 ) {
+      r.style.setProperty('--us', "none");
+      r.style.setProperty('--ca', "inline");
       r.style.setProperty('--fr', "inline");
       r.style.setProperty('--fr-en', "none");
+      toggle_currency = 0;
       toggle_fr = 1;
     }
     else {
