--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
   <meta name="description" content="White Elephant&mdash;comic book and companion app to change the way we look at wildlife.&nbsp;&#92;&nbsp;&Eacute;l&eacute;phant blanc &mdash; une bande dessin&eactue;e et l’app qui l’accompagne pour changer la fa&ccedil;on dont nous regardons la faune." />
-  <meta name="keywords" content="white elephant, savanna elephant animation, elephant comic book, elephant app, okavango delta" />
+  <meta name="keywords" content="white elephant, elephant animation, elephant comic book, elephant app, okavango delta" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.</title>
@@ -34,6 +34,7 @@
       <li class="crumb scene-one logo"><a href="../../" title="Animat Habitat"><img alt="OAFA Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/oafa.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb scene scene-one"><a><em>White Elephant</em></a></li>
       <li class="right thin"><a onclick="fr();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="right thin" id="currency"><a class="title" onclick="currency();" title="Animat Habitat ."><font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font><font class="paypal-us">CA&nbsp;&#92;&nbsp;<b class="overscore">US</b></font>&nbsp;<font class="currency-symbol">&#36;</font></a></li>
     </ul>
   </nav>
 
@@ -74,32 +75,28 @@
 
             <h5>UNESCO World Heritage Site<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a href="../../url/whc/1432/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Okavango Delta">Okavango Delta</a>.</h5>
 
-            <!-- <h4 class="linebreak"><a onclick="preview();" title=""><em>Preview</em></a></h4> -->
-
           </div>
 
           <div class="clear diptych">
 
             <div>
-              <h5><font class="overscore">E-book</font><font class="fr">&nbsp;&#92;&nbsp;Publication num&eacute;rique</font></h5>
+              <h5>E-book<font class="fr">&nbsp;&#92;&nbsp;Publication num&eacute;rique</font></h5>
               <p>Language:<font class="fr">&nbsp;&#92;&nbsp;Langue&nbsp;:</font> En, Fr<!--, Zh-HanT*--></p>
-              <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> CA$15</p>
+              <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">15</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">12</font></font></p>
               <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0101 0511</font></p>
               <p>Publication Date:<font class="fr">&nbsp;&#92;&nbsp;Date de parution&nbsp;:</font> 12.2024</p>
 
             </div>
 
             <div>
-              <h5><font class="overscore">Full Color Paperback</font><font class="fr">&nbsp;&#92;&nbsp;Broch&eacute; en couleur</font></h5>
+              <h5>Full Color Paperback<font class="fr">&nbsp;&#92;&nbsp;Broch&eacute; en couleur</font></h5>
               <p>Language:<font class="fr">&nbsp;&#92;&nbsp;Langue&nbsp;:</font> En, Fr</p>
               <p>Limited edition.<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition limit&eacute;e&nbsp;.</font><!-- ? copies--></p>
-              <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> CA$50</p>
+              <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">50</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price-us">87</font></font></p>
               <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0101 1511</font></p>
               <p>Publication Date:<font class="fr">&nbsp;&#92;&nbsp;Date de parution&nbsp;:</font> 12.2024</p>
 
             </div>
-
-            <!-- <p>W Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> X XXXXX XXXXX X XXXXX</p> -->
 
           </div>
 
@@ -120,49 +117,64 @@
         <div class="clear ptych-right product-stock">
 
           <div>
-
             <h4 class="in-stock"><font class="thin">Scheduled<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;vue December 2024</font></font></h4>
             <h5 class="stock woo-article">Two editions available for pre-order with PayPal.<font class="fr">&nbsp;&#92;&nbsp;Deux &eacute;ditions pr&ecirc;t &agrave; pr&eacute;commander.</font></h5>
 
             <h5 class="woo-article-title"><font class="title">White Elephant</font> <font class="small">E-book<font class="fr">&nbsp;&#92;&nbsp;Publication num&eacute;rique</font></font></h5>
 
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+            <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
               <input type="hidden" name="cmd" value="_s-xclick">
               <input type="hidden" name="hosted_button_id" value="DULA9DUNNAFKQ">
 
+              <input type="hidden" name="currency_code" value="CAD">
               <input class="format" name="on0" type="hidden" value="Format">
               <select class="format" name="os0">
-                <option value="Portable Document Format (.pdf)">Portable Document Format (.pdf)</option>
-                <option value="Comic Book Archive (.cbz)">Comic Book Archive (.cbz)</option>
-                <option value="Electronic Publication (.epub)">Electronic Publication (.epub)</option>
-                <option value="Apple Book (.ibook)">Apple Book (.ibook)</option>
-                <option value="Kindle Edition (.azw)">Kindle Edition (.azw)</option>
+                <option value="Portable Document Format (.pdf)">.pdf &nbsp;Portable Document Format</option>
+                <option value="Comic Book Archive (.cbz)">.cbz &nbsp;Comic Book Archive</option>
+                <option value="Electronic Publication (.epub)">.epub &nbsp;Electronic Publication</option>
+                <option value="Apple Book (.ibook)">.ibook &nbsp;Apple Book</option>
+                <option value="Kindle Edition (.azw)">.azw &nbsp;Kindle Edition</option>
               </select>
-
-              <!-- <div class="color-one format">
-                <input class="format" type="hidden" name="on1" value="Select Preferred Language">
-                <select class="format" name="os1">
-                  <option value="Default: English (En)">English / Anglais (En) </option>
-                  <option value="Français (Fr)">French / Français (Fr) </option>
-                  <option value="Traditional Chinese (Zh-HanT)">Traditional Chinese (Zh-HanT) </option></select></div> -->
 
               <button type="submit" name="submit" alt="White Elephant E-book via PayPal">Pre-order<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;-commander</font></button>
             </form>
 
-            <p class="linebreak lineend small">Digital download is made available upon publication.<font class="fr">&nbsp;&#92;&nbsp;T&eacute;l&eacute;chargement num&eacute;rique est mis &agrave; disposition sur d&egrave;s la publication.</font></p>
+            <form class="paypal-us" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+
+              <input type="hidden" name="cmd" value="_s-xclick">
+              <input type="hidden" name="hosted_button_id" value="Z2T2FB8FCWB74">
+
+              <input type="hidden" name="currency_code" value="USD">
+              <input class="format" name="on0" type="hidden" value="Format">
+              <select class="format" name="os0">
+                <option value="Portable Document Format (.pdf)">.pdf &nbsp;Portable Document Format</option>
+                <option value="Comic Book Archive (.cbz)">.cbz &nbsp;Comic Book Archive</option>
+                <option value="Electronic Publication (.epub)">.epub &nbsp;Electronic Publication</option>
+                <option value="Apple Book (.ibook)">.ibook &nbsp;Apple Book</option>
+                <option value="Kindle Edition (.azw)">.azw &nbsp;Kindle Edition</option>
+              </select>
+
+              <button type="submit" name="submit" alt="White Elephant E-book via PayPal">Pre-order<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;-commander</font></button>
+            </form>
+
+            <p class="linebreak small">Digital download is made available upon publication.<font class="fr">&nbsp;&#92;&nbsp;T&eacute;l&eacute;chargement num&eacute;rique est mis &agrave; disposition sur d&egrave;s la publication.</font></p>
+
+          </div>
+
+          <div>
 
             <h5 class="woo-article-title"><font class="title">White Elephant</font> <font class="small">Full Color Paperback<font class="fr">&nbsp;&#92;&nbsp;Broch&eacute; en couleur</font></font></h5>
 
-            <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+            <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
               <input type="hidden" name="cmd" value="_s-xclick">
               <input type="hidden" name="hosted_button_id" value="6BHCFHZEPEF58">
 
-              <input type="hidden" name="on0" value="Paperback &plus; Shipping \ Livraison">
+              <input type="hidden" name="on0" value="Shipping \ Livraison">
               <select name="os0">
-                <option value="Canada">Canada</option>
-                <option value="International">International, &plus;CA$50</option>
+                <option value="Canada">Canada Post</option>
+                <option value="International">International &plus;50&nbsp;&#36;&nbsp;CA</option>
               </select>
 
               <input type="hidden" name="currency_code" value="CAD">
@@ -170,9 +182,27 @@
 
             </form>
 
-            <p class="linebreak small">Shipping within Canada is included.<font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition au Canada est incluse.</font></p>
-            <p class="linebreak small">Please select the <u>International</u> option for shipping outside Canada.<font class="fr">&nbsp;&#92;&nbsp;Veuillez s&eacute;lectionner l'option <u>Internationale</u> pour l'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada.</font></p>
-            <p class="linebreak small">International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat &frasl; Terms of Purchase">Terms of Purchase</a><font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada est limit&eacute;e aux pays r&eacute;pertori&eacute;s comme disponibles pour l'exp&eacute;dition international dans les conditions d'achat de la boutique.</font></p>
+            <form class="paypal-us" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+
+              <input type="hidden" name="cmd" value="_s-xclick">
+              <input type="hidden" name="hosted_button_id" value="A8CXERFPW86KG">
+
+              <input type="hidden" name="currency_code" value="USD">
+              <button type="submit" name="submit" alt="White Elephant Comic Book via PayPal">Pre-order<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;-commander</font></button>
+
+            </form>
+
+            <div class="clear paypal-ca">
+              <p class="linebreak small">Shipping within Canada is included.<font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition au Canada est incluse.</font></p>
+              <p class="linebreak small">Please select the <u>International</u> option for shipping outside Canada.<font class="fr">&nbsp;&#92;&nbsp;Veuillez s&eacute;lectionner l'option <u>Internationale</u> pour l'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada.</font></p>
+              <p class="linebreak small">International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat &frasl; Terms of Purchase">Terms of Purchase</a><font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada est limit&eacute;e aux pays r&eacute;pertori&eacute;s comme disponibles pour l'exp&eacute;dition international dans les conditions d'achat de la boutique.</font></p>
+
+            </div>
+
+            <div class="clear paypal-us">
+              <p class="linebreak small">International shipping to the contiguous United States is included in the US<font class="currency-symbol">&#36;</font> list price.</p>
+
+            </div>
 
           </div>
 
@@ -188,7 +218,6 @@
     <section class="single">
       <div class="quote">
         <h2>Project Broadcast<font class="fr">&nbsp;&#92;&nbsp;Mises &agrave; jour du projet</font></h2>
-        <!-- <p>The art, code and music of <em>White Elephant</em> helps change the way our generation looks at wildlife, and save elephants for the next; for elephants, for everyone&mdash;we journey on.<font class="fr">&nbsp;&#92;&nbsp;L'art, le code et la musique de <em>&Eacute;l&eacute;phant blanc</em> aide changer la fa&ccedil;on dont notre g&eacute;n&eacute;ration regarde la nature, et sauvegarder les &eacute;l&eacute;phants pour le prochain; pour les &eacute;l&eacute;phants, pour tout le monde &mdash; nous voyageons.</font></p> -->
       </div>
     </section>
   </div>
@@ -341,11 +370,6 @@
         <p class="linebreak small"><font class="title">Tolstoy</font></p>
         <p class="small"><font class="small">Big Life Foundation &ndash;&nbsp;Amboseli (c.1971-2022)</font></p>
 
-
-        <!-- One Ton -->
-
-        <!-- Craig -->
-
       </div>
 
       <div class="quote ptych-left">
@@ -361,23 +385,28 @@
 <script>
 
   var r = document.querySelector(':root'),
+      toggle_currency = 0,
       toggle_fr = 0,
+      cur = document.getElementById( "currency" ),
       num = document.getElementById( "scene" ),
       img = document.getElementById( "preview" ),
       tmb = document.getElementById( "preview-thumbnail" );
 
+  r.style.setProperty('--us', "none");
   r.style.setProperty('--fr', "none");
 
+  cur.style.display = "none";
   num.style.display = "none";
   img.style.display = "none";
-  // tmb.style.display = "block";
 
   function scene() {
     if ( num.style.display == "none" ) {
+      cur.style.display = "block";
       num.style.display = "block";
       document.querySelector( "#scene-header" ).scrollIntoView({ behavior: 'smooth' });
     }
     else {
+      cur.style.display = "none";
       num.style.display = "none";
       document.querySelector( "#scene-header" ).scrollIntoView({ behavior: 'smooth' });
     }
@@ -394,10 +423,29 @@
     }
   };
 
+  function currency() {
+    if ( toggle_currency == 0 ) {
+      r.style.setProperty('--us', "inline");
+      r.style.setProperty('--ca', "none");
+      r.style.setProperty('--fr', "none");
+      r.style.setProperty('--fr-en', "inline");
+      toggle_currency = 1;
+      toggle_fr = 0;
+    }
+    else {
+      r.style.setProperty('--us', "none");
+      r.style.setProperty('--ca', "inline");
+      toggle_currency = 0;
+    }
+  };
+
   function fr() {
     if ( toggle_fr == 0 ) {
+      r.style.setProperty('--us', "none");
+      r.style.setProperty('--ca', "inline");
       r.style.setProperty('--fr', "inline");
       r.style.setProperty('--fr-en', "none");
+      toggle_currency = 0;
       toggle_fr = 1;
     }
     else {
